#8 Retours page article fix Fiche responsive z-index

--- a/src/styles/partials/_single.scss
+++ b/src/styles/partials/_single.scss
@@ -55,7 +55,7 @@
 #gotoFiche {
   position: fixed;
   top: 80px;
-  z-index: 1;
+  z-index: 10;
 
 
   > a {
